syntax = "proto3";

option java_package = "discop.protobuf.msg";

message NodeSpec {
    uint32 core_count = 1;
    string name = 2;
}

message JobInput {
    repeated string arguments = 1;
}

message JobUnitInput {
    uint32 segment = 1;
    JobInput input = 2;
}

message JobUnitOutput {
    uint64 job_id = 1;
    string stdout = 2;
    int32 exit_code = 3;
    uint32 segment = 4;
}

message Ack {}

message Job {
    uint64 job_id = 1;
    bytes wasm_bytes = 2;
    repeated JobInput inputs = 3;
}

message JobUnit {
    uint64 job_id = 1;
    bytes wasm_bytes = 2;
    repeated JobUnitInput inputs = 3;
}

message GetJobStatus {
    uint64 job_id = 1;
}

message BulkJobUnitCompletion {
    repeated JobUnitOutput outputs = 1;
}

message JobCompletion {
    uint64 job_id = 1;
    repeated JobUnitOutput outputs = 2;
}